; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_scene.c_RE_AddAdditiveLightToScene.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_scene.c_RE_AddAdditiveLightToScene.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qtrue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RE_AddAdditiveLightToScene(i32 %0, float %1, float %2, float %3, float %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store i32 %0, i32* %6, align 4
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store float %4, float* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load float, float* %7, align 4
  %13 = load float, float* %8, align 4
  %14 = load float, float* %9, align 4
  %15 = load float, float* %10, align 4
  %16 = load i32, i32* @qtrue, align 4
  %17 = call i32 @RE_AddDynamicLightToScene(i32 %11, float %12, float %13, float %14, float %15, i32 %16)
  ret void
}

declare dso_local i32 @RE_AddDynamicLightToScene(i32, float, float, float, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
